# Summary-and-Subtitles

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  servicework.js
frontend/: intex.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  main.css
frontend/src/components/: Footer.js  Form.js  Header.js
